<resources>
    <string name="app_name">Blackhole</string>
    <string name="switch_icon_name">switch icon</string>
    <string name="vpn_started">RUNNING</string>
    <string name="vpn_starting">STARTING</string>
    <string name="vpn_name">Blackhole VPN</string>
    <string name="vpn_stopped">STOPPED</string>
    <string name="notification_vpn_connected">connected</string>
    <string name="notification_vpn_connecting">connection</string>
    <string name="network_utils_button">Network Utils</string>
    <string name="network_utils_activity_title">Network Utils</string>
    <string name="network_utils_item_title">Ping</string>
    <string name="network_utils_item_description">Ping description</string>
    <string name="ping_activity_title">Ping</string>
    <string name="iperf_activity_title">Iperf</string>
    <string name="pour_activity_title">Pour</string>
    <string name="sink_activity_title">Sink</string>
    <string name="sync_activity_title">Sync</string>
    <string name="background_activity_title">Background Services</string>
    <string name="tethering_activity_title">USB Tethering</string>
    <string name="echo_activity_title">UDP Echo</string>
    <string name="probing_activity_title">Probing</string>
    <string name="traceroute_activity_title">Traceroute</string>
    <string name="ping_ip_address">Target IP address</string>
    <string name="iperf_ip_address">Target IP address</string>
    <string name="udp_ip_address">Target IP address</string>
    <string name="ping_action">Ping</string>
    <string name="iperf_action">Iperf</string>
    <string name="ping_tab_result_raw">No content</string>
    <string name="ping_tab_result_parsed">Parsed result</string>
    <string name="iperf_tab_result_raw">No content</string>
    <string name="iperf_tab_result_parsed">Parsed result</string>
    <string name="default_ping_target">1.1.1.1</string>
    <string name="default_iperf_target">1.1.1.1</string>
    <string name="button_stop">Stop</string>
    <string name="toast_invalid_ip">The IP address is illegal</string>
    <string name="menu_set_interface">Interface</string>
    <string name="menu_set_frequency">Update Frequency</string>
    <string name="menu_set_sink_mode">Sink Mode</string>
    <string name="menu_set_pour_mode">Pour Mode</string>
    <string name="menu_set_bitrate">Bitrate</string>
    <string name="menu_set_datarate">Datarate</string>
    <string name="menu_set_duration">Duration</string>
    <string name="menu_set_logging">Logging</string>
    <string name="menu_set_probing_interval">Probing interval</string>
    <string name="menu_set_packet_size">Packet size</string>
    <string name="menu_clear_data">Clear Data</string>
    <string name="menu_stop_all">Stop All</string>
    <string name="menu_start_all">Start All</string>
    <string name="menu_show_data_folder">Show Data Folder</string>
    <string name="dialog_set_interface_title">Pick interface</string>
    <string name="dialog_set_sink_mode_title">Set sink mode</string>
    <string name="dialog_boolean_title">Enable or not</string>
    <string name="dialog_set_pour_mode_title">Set pour mode</string>
    <string name="dialog_set_pour_bitrate_title">Set pour bitrate</string>
    <string name="dialog_set_bitrate_title">Set bitrate</string>
    <string name="dialog_set_probing_delay_title">Set probing delay</string>
    <string name="dialog_set_frequency">Set frequency</string>
    <string name="dialog_set_sink_bitrate_title">Set sink bitrate</string>
    <string name="dialog_set_packet_size_title">Set UDP packet size</string>
    <string name="dialog_set_duration_title">Set duration</string>
    <string name="dialog_clear_data_title">Confirm</string>
    <string name="dialog_clear_data_message">Are you sure to delete all data?</string>
    <string name="dialog_location_permission">Access to the location service is required to log GPS info</string>
    <string name="dialog_phone_state_permission">Access to the phone state is required to log radio info</string>
    <string name="toast_set_interface">Set interface: %1$s</string>
    <string name="toast_set_udp_mode">Set UDP mode: %1$s</string>
    <string name="toast_set_enabled">Enabled: %1$s</string>
    <string name="toast_set_pour_bitrate">Set pour bitrate: %1$s</string>
    <string name="toast_set_bitrate">Set bitrate: %1$s</string>
    <string name="toast_set_sink_bitrate">Set sink bitrate: %1$s</string>
    <string name="toast_set_duration">Set duration: %1$s</string>
    <string name="toast_set_probing_delay">Set probing delay: %1$s</string>
    <string name="toast_set_packet_size">Set packet size: %1$d bytes</string>
    <string name="toast_set_frequency">Set frequency: %1$d ms</string>
    <string name="toast_udp_pour_finished">UDP pour finished, export to disk</string>
    <string name="toast_udp_sink_finished">UDP sink finished, export to disk</string>
    <string name="toast_tcp_pour_finished">TCP pour finished, export to disk</string>
    <string name="toast_tcp_sink_finished">TCP sink finished, export to disk</string>
    <string name="toast_probing_finished">Probing finished, export to disk</string>
    <string name="toast_sync_error">Failed to connect to %1$s:%2$d</string>
    <string name="toast_location_denied">Location permission denied. It is essential for collecting GPS info</string>
    <string name="toast_phone_state_denied">Read phone state permission denied. It is essential for collecting radio info</string>
    <string name="sink_button">Sink</string>
    <string name="pour_button">Pour</string>
    <string name="empty">EMPTY</string>
    <string name="no_data">No Data</string>
    <string name="tethering_button">Tethering</string>

    <string name="statics_title">Statics</string>
    <string name="statics_metric">Metric</string>
    <string name="statics_latency">Latency</string>
    <string name="statics_bandwidth">Bandwidth</string>
    <string name="statics_packet_loss">Packet Loss</string>
    <string name="statics_current">Current</string>
    <string name="statics_average">Average</string>
    <string name="statics_median">Median</string>
    <string name="statics_mbps">%1$.1f mbps</string>
    <string name="statics_kbps">%1$.1f kbps</string>
    <string name="statics_ms">%1$d ms</string>
    <string name="statics_percent">%1$.2f%%</string>

    <string name="clock">Clock</string>
    <string name="sync_activity_clock_drift">Clock drift: %1$d ms</string>
    <string name="sync_activity_clock_confidence">Confidence: %1$.1f ms</string>
    <string name="no_value">/</string>

    <string name="location">Location</string>
    <string name="location_desc">Record GPS location</string>
    <string name="cell_info">Cell Info</string>
    <string name="cell_info_desc">Record physical-layer radio info including cell id, signal strength, etc.</string>
    <string name="subscription_info">Subscription Info</string>
    <string name="subscription_info_desc">Record subscription info to differentiate multiple SIM cards</string>

    <string name="background_notification_title">Blackhole is running</string>
    <string name="background_notification_text">Measurements: %1$s</string>
    <string name="probing_notification_title">UDP Probing</string>
    <string name="probing_notification_text">Testing network connectivity</string>

    <string name="error">ERROR</string>
    <string name="infinity">Infinity</string>
    <string name="parameters">Show Parameters</string>
    <string name="pending">-</string>
    <string name="sink_statics">Sink Statics</string>
    <string name="pour_statics">Pour Statics</string>
    <string name="dumping_log_file">Dumping log file</string>
    <string name="no_result">No Result</string>

    <string name="start">Start Measurement</string>
    <string name="stop">Stop Measurement</string>

    <string name="echo_latency">Latency: %1$.2f ms</string>
    <string name="udp_echo_start">Starting UDP echo</string>
    <string name="udp_echo_stop">Stopping UDP echo</string>
    <string name="probing">Probing</string>
    <string name="probing_button">Probe</string>

    <string name="received_packets">Received packets</string>
    <string name="sent_packets">Sent packets</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="placeholder">/</string>
    <string name="probing_error">Failed to initiate probing service</string>

    <string name="home_no_content_text">No network measurement is selected. Please add one by pressing the plus button.</string>
    <string name="add_measurement">Add measurement</string>
    <string name="add_measurement_detail">Add %1$s Measurement</string>

    <string name="last_modified">Updated %1$ds ago</string>
    <string name="error_add_measurement">The measurement is unique and cannot be added twice.</string>
    <string name="reset_measurement">Reset measurement</string>
    <string name="default_measurement">Load default measurement</string>
    <string name="delete_measurement_title">Delete measurement</string>
    <string name="delete_measurement_message">Are you sure to delete this measurement?</string>

    <string name="measurement_record_status">#%1$d</string>
    <string name="measurement_no_setup">Please add a least one measurement to get started</string>
    <string name="permission_missing">Please grant all permissions</string>
</resources>
