<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_measurement"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_measurement"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/enable_vpn"
        android:checkable="true"
        android:title="@string/vpn_name"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_measurement"
        android:title="@string/reset_measurement" />
    <item
        android:id="@+id/default_measurement"
        android:title="@string/default_measurement" />
    <item
        android:id="@+id/laptop_assistant"
        android:title="Laptop Assistant" />
</menu>