<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/switch_button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/switch_icon_name"
            android:padding="16dp"
            android:src="@drawable/switch_on" />

        <TextView
            android:id="@+id/switch_text"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/vpn_started" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/network_utils_button"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:paddingStart="16dp"
        android:onClick="openNetworkUtils"
        android:paddingEnd="16dp"
        android:layout_height="wrap_content"
        android:text="@string/network_utils_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>