<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ping_action"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="32dp"
            android:onClick="pingAction"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/ping_action"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@id/ping_action"
            android:hint="@string/ping_ip_address"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_ping_target" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/result_tab"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_panel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"></com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/result_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/result_tab"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
</RelativeLayout>